samples/_failures_safe/1761226549_c9ed42_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_782b38e1.c: In function ‘main’:
./samples/SAFE/__tmp_782b38e1.c:159:5: error: ‘add’ undeclared (first use in this function)
  159 |     add
      |     ^~~
./samples/SAFE/__tmp_782b38e1.c:159:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_782b38e1.c:159:8: error: expected ‘;’ at end of input
  159 |     add
      |        ^
      |        ;
./samples/SAFE/__tmp_782b38e1.c:159:5: error: expected declaration or statement at end of input
  159 |     add
      |     ^~~
